# wardrobeAssistant

./: .env.example  .gitignore  AGENT.md  README.md  WORKFLOW.md  docker-compose.yml  main.py  project_plan-gemini.md  pyproject.toml  test_backend.py  verify_pipeline.py
backend/: __init__.py  database.py  main.py  models.py
backend/routers/: chat.py  items.py  outfits.py
backend/services/: agents.py  llm_engine.py  memory.py  vision_pipeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/domains/wardrobe/: types.ts
frontend/src/domains/wardrobe/components/: ApparelIngestion.tsx  ClosetInsights.tsx  ClosetInventory.tsx  ClosetItemCard.tsx  ClosetItemDrawer.tsx
frontend/src/pages/: AnalyticsTab.tsx  AssistantTab.tsx  HomeTab.tsx  OutfitsTab.tsx  WardrobeTab.tsx
frontend/src/shared/components/: AppHeader.tsx
